--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Bandits 999 | AI Web Designer & Developer">
     <meta property="og:description" content="AI-driven Web Developer & Designer passionate about building sleek, high-performance websites.">
     <meta property="og:image" content="assets/logo.jpg">
-    <meta property="og:url" content="https://bandits999.com">
+    <meta property="og:url" content="https://bandits999.vercel.app">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Bandits 999 | AI Web Designer & Developer">
@@ -22,16 +22,16 @@
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://bandits999.com">
+    <link rel="canonical" href="https://bandits999.vercel.app">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Bandits 999",
-      "url": "https://bandits999.com",
+      "url": "https://bandits999.vercel.app",
       "jobTitle": "AI Web Designer & Developer",
       "description": "AI-driven Web Developer & Designer passionate about building sleek, high-performance websites.",
-      "image": "https://bandits999.com/assets/logo.jpg",
+      "image": "https://bandits999.vercel.app/assets/logo.jpg",
       "sameAs": [
         "https://bndts.netlify.app/"
       ],
