--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/second.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <link rel="shortcut icon" href="https://bandits999.vercel.app/assets/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="canonical" href="https://bandits999.vercel.app">
@@ -44,7 +44,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="assets/logo.jpg" alt="Bandits 999 Logo">
+                <img src="assets/logo.ico" alt="Bandits 999 Logo">
             </div>
             <div class="menu-toggle">
                 <i class="fas fa-bars"></i>
@@ -204,7 +204,7 @@
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://i.redd.it/d7v7tbylygk91.png" alt="Gallery Image 2">
+                    <img src="assets/bandits.jpg" alt="Gallery Image 2">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
