--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Bandits 999 | AI Web Designer & Developer">
     <meta property="og:description" content="Bandits 999 - Coolest Guy In The World.">
-    <meta property="og:image" content="assets/logo.jpg">
+    <meta property="og:image" content="https://bandits999.vercel.app/assets/Bandits-Small.jpg">
     <meta property="og:url" content="https://bandits999.vercel.app">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Bandits 999 | AI Web Designer & Developer">
     <meta name="twitter:description" content="Bandits 999 - Coolest Guy In The World.">
-    <meta name="twitter:image" content="assets/logo.jpg">
+    <meta name="twitter:image" content="https://bandits999.vercel.app/assets/Bandits-Small.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/second.css">
     <link rel="stylesheet" href="css/third.css">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/animations.css">
-    <link rel="shortcut icon" href="assets/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://bandits999.vercel.app/assets/Bandits-Small.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -37,7 +37,7 @@
             "url": "https://bandits999.vercel.app",
             "jobTitle": "AI Web Designer & Developer",
             "description": "Coolest Guy In The World.",
-            "image": "https://bandits999.vercel.app/assets/logo.jpg",
+            "image": "https://bandits999.vercel.app/assets/Bandits-Logo.webp",
             "sameAs": ["https://bndts.netlify.app/"],
             "knowsAbout": ["Web Design", "UI/UX Design", "AI Web Development", "Next.js", "Tailwind CSS", "Be Cools"]
         }
@@ -48,7 +48,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="assets/logo.ico" alt="Bandits 999 Logo">
+                <img src="https://bandits999.vercel.app/assets/Bandits-Small.webp" alt="Bandits 999 Logo">
             </div>
             <div class="menu-toggle">
                 <i class="fas fa-bars"></i>
@@ -170,7 +170,7 @@
             <h2 class="section-title animate-on-scroll">About Me</h2>
             <div class="about-content">
                 <div class="about-image animate-on-scroll slide-in-left">
-                    <img src="assets/bandits.jpg" alt="Bandits 999 Profile Photo" class="profile-image">
+                    <img src="https://bandits999.vercel.app/assets/Bandits-Small.webp" alt="Bandits 999 Profile Photo" class="profile-image">
                 </div>
                 <div class="about-text animate-on-scroll slide-in-right">
                     <h3 class="about-subtitle animate-on-scroll" style="--stagger-index: 0;">Lowlife and Lowkey</h3>
@@ -240,7 +240,7 @@
                     </div>
                 </div>
                 <div class="gallery-item animate-on-scroll scale-up" style="--stagger-index: 1;">
-                    <img src="assets/bandits.jpg" alt="Gallery Image 2">
+                    <img src="https://bandits999.vercel.app/assets/Bandits-Logo.webp" alt="Gallery Image 2">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
