--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Bandits 999 | AI Web Designer & Developer</title>
-    <meta name="description" content="Experienced AI Web Designer & Developer specializing in modern web development, UI/UX design, and creative solutions. View my portfolio of innovative projects.">
+    <title>Bandits 999 | Portfolio</title>
+    <meta name="description" content="Bandits 999 - Expert AI Web Designer & Developer specializing in modern web development, UI/UX design, and innovative digital solutions. Transform your ideas into stunning websites with cutting-edge AI technology.">
     <meta name="keywords"
-        content="AI web designer, web developer, frontend development, UI/UX design, creative portfolio, Next.js developer, Tailwind CSS expert, modern web design, Bandits 999, responsive web development">
+        content="AI web designer, AI web developer, professional web development, UI/UX design, creative portfolio, modern web design, Bandits 999, responsive web development, artificial intelligence web design, custom website development, AI-powered web solutions, AI Web Designer and Development, Bandits 999 web developer, Bandits 999 portfolio">
     <meta name="author" content="Bandits 999">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Bandits 999 | Professional AI Web Designer & Developer">
-    <meta property="og:description" content="Experienced AI Web Designer & Developer showcasing innovative web projects and creative solutions. View my portfolio of modern, responsive websites.">
+    <meta property="og:title" content="Bandits 999 | AI Web Designer & Developer - Professional Services">
+    <meta property="og:description" content="Bandits 999 - Experienced AI Web Designer & Developer showcasing innovative web projects and creative solutions. Expert in AI-powered web development and design.">
     <meta property="og:image" content="https://bandits999.vercel.app/assets/Bandits-Small.jpg">
     <meta property="og:url" content="https://bandits999.vercel.app">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Bandits 999 | Professional AI Web Designer & Developer">
-    <meta name="twitter:description" content="Experienced AI Web Designer & Developer showcasing innovative web projects and creative solutions. View my portfolio of modern, responsive websites.">
+    <meta name="twitter:title" content="Bandits 999 | AI Web Designer & Developer - Professional Services">
+    <meta name="twitter:description" content="Bandits 999 - Experienced AI Web Designer & Developer showcasing innovative web projects and creative solutions. Expert in AI-powered web development and design.">
     <meta name="twitter:image" content="https://bandits999.vercel.app/assets/Bandits-Small.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
@@ -36,10 +36,15 @@
             "name": "Bandits 999",
             "url": "https://bandits999.vercel.app",
             "jobTitle": "AI Web Designer & Developer",
-            "description": "Professional AI Web Designer & Developer specializing in modern web development and creative solutions.",
+            "description": "Professional AI Web Designer & Developer specializing in modern web development, UI/UX design, and innovative digital solutions using artificial intelligence. Bandits 999 creates stunning, responsive websites with cutting-edge AI technology.",
+            "alternateName": "Bandits 999 Web Development",
+            "mainEntityOfPage": {
+                "@type": "WebPage",
+                "@id": "https://bandits999.vercel.app"
+            },
             "image": "https://bandits999.vercel.app/assets/Bandits-Logo.webp",
             "sameAs": ["https://bndts.netlify.app/"],
-            "knowsAbout": ["Bandits 999", "Web Design", "UI/UX Design", "AI Web Development", "Next.js", "Tailwind CSS"]
+            "knowsAbout": ["Bandits 999", "Web Design", "UI/UX Design", "AI Web Development", "Next.js", "Tailwind CSS", "AI Web Designer and Development", "Responsive Web Design", "Modern Web Applications", "SEO Optimization", "Web Performance"]
         }
     </script>
 </head>
