--- a/email-generator/index.html
+++ b/email-generator/index.html
@@ -2,8 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Bandits 999 | Email Generator</title>
+    <meta name="description" content="Bandits 999 - Generate professional email variations from your name.">
+    <meta name="keywords"
+        content="Email Generator - Generate professional email variations from your name">
+    <meta name="author" content="Bandits 999">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Bandits 999 | Email Generator">
+    <meta property="og:description" content="Bandits 999 - Generate professional email variations from your name.">
+    <meta property="og:image" content="https://bandits999.vercel.app/assets/Bandits-Small.jpg">
+    <meta property="og:url" content="https://bandits999.vercel.app/email-generator">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Bandits 999 | Email Generator">
+    <meta name="twitter:description" content="Bandits 999 - Generate professional email variations from your name.">
+    <meta name="twitter:image" content="https://bandits999.vercel.app/assets/Bandits-Small.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bandits999 | Email Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
