--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <p class="text-gray-400 max-w-sm">
                 Gamers | Lowlife
-                <br />Beat the odds and become a digital creator
+                <br />Beat the odds and become a champion
             </p>
         </div>
 
