--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <!-- Footer Navigation -->
     <footer class="fixed bottom-0 w-full bg-black bg-opacity-50 backdrop-blur-md py-2 px-6 flex justify-around border-t border-gray-800">
-        <a href="index.html" class="text-purple-500 text-xl"><i class="fas fa-home"></i></a>
+        <a href="" class="text-purple-500 text-xl"><i class="fas fa-home"></i></a>
         <a href="contact.html" class="text-gray-400 hover:text-purple-500 text-xl"><i class="fa-solid fa-envelope"></i></a>
         <a href="about.html" class="text-gray-400 hover:text-purple-500 text-xl"><i class="fas fa-user"></i></a>
     </footer>
