--- a/contact.html
+++ b/contact.html
@@ -71,10 +71,10 @@
 
     <!-- Social Icons -->
     <div class="flex justify-center space-x-5 mb-10">
-      <a href="#" class="text-gray-300 hover:text-[#5865F2] text-xl"><i class="fab fa-discord"></i></a>
-      <a href="#" class="text-gray-300 hover:text-[#FF0000] text-xl"><i class="fab fa-youtube"></i></a>
-      <a href="#" class="text-gray-300 hover:text-[#1877F2] text-xl"><i class="fab fa-facebook"></i></a>
-      <a href="#" class="text-gray-300 hover:text-[#FFFFFF] text-xl"><i class="fab fa-tiktok"></i></a>
+      <!-- <a href="#" class="text-gray-300 hover:text-[#5865F2] text-xl"><i class="fab fa-discord"></i></a> -->
+      <a href="https://www.youtube.com/@MrBroowc" class="text-gray-300 hover:text-[#FF0000] text-xl"><i class="fab fa-youtube"></i></a>
+      <a href="https://www.facebook.com/DanExXo" class="text-gray-300 hover:text-[#1877F2] text-xl"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.tiktok.com/@bandits.999" class="text-gray-300 hover:text-[#FFFFFF] text-xl"><i class="fab fa-tiktok"></i></a>
     </div>
 
     <!-- Contact Form -->
