--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       </div>
       <p class="text-gray-400 max-w-sm">
         Gamers - Lowlife
-        <br />Beat the odds and become a champion
+        <br />Beat the odds and become a champion.
       </p>
     </div>
 
