--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta property="og:url" content="bandits999.vercel.app">
     <meta property="og:title" content="Bandits 999 – Official Website">
     <meta property="og:description" content="Beat the odds and become a champion.">
-    <meta property="og:image" content="bandits999.vercel.app/profile.png">
+    <meta property="og:image" content="bandits999.vercel.app/img/profile.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="bandits999.vercel.app">
     <meta property="twitter:title" content="Bandits 999 – Official Website">
     <meta property="twitter:description" content="Beat the odds and become a champion.">
-    <meta property="twitter:image" content="bandits999.vercel.app/profile.png">
+    <meta property="twitter:image" content="bandits999.vercel.app/img/profile.png">
 
     <!-- Robots -->
     <meta name="robots" content="index, follow">
@@ -27,7 +27,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="shortcut icon" href="img/profile.png" type="image/x-icon">
+    <link rel="shortcut icon" href="bandits999.vercel.app/img/profile.png" type="image/x-icon">
     <style>
         body {
           font-family: 'Inter', sans-serif;
