--- a/about.html
+++ b/about.html
@@ -12,14 +12,14 @@
   <meta property="og:url" content="bandits999.vercel.app">
   <meta property="og:title" content="Bandits 999 – Official Website">
   <meta property="og:description" content="Beat the odds and become a champion.">
-  <meta property="og:image" content="bandits999.vercel.app/img/profile.png">
+  <meta property="og:image" content="https://bandits999.vercel.app/img/profile.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="bandits999.vercel.app">
   <meta property="twitter:title" content="Bandits 999 – Official Website">
   <meta property="twitter:description" content="Beat the odds and become a champion.">
-  <meta property="twitter:image" content="bandits999.vercel.app/img/profile.png">
+  <meta property="twitter:image" content="https://bandits999.vercel.app/img/profile.png">
 
   <!-- Robots -->
   <meta name="robots" content="index, follow">
@@ -57,7 +57,7 @@
     <!-- Profile -->
     <div class="flex flex-col items-center text-center mb-8">
       <div class="profile-ring rounded-full mb-4 cursor-pointer" onclick="openPreview(this.querySelector('img').src)">
-        <img src="bandits999.vercel.app/img/profile.png" class="w-24 h-24 rounded-full object-cover" alt="Bandits 999" loading="lazy" />
+        <img src="https://bandits999.vercel.app/img/profile.png" class="w-24 h-24 rounded-full object-cover" alt="Bandits 999" loading="lazy" />
       </div>
       <div class="flex items-center mb-1">
         <h1 class="text-xl font-semibold mr-2">Bandits 999</h1>
@@ -106,7 +106,7 @@
   <!-- Footer Navigation -->
     <footer class="fixed bottom-0 w-full bg-black bg-opacity-50 backdrop-blur-md py-2 px-6 flex justify-around border-t border-gray-800">
       <a href="index.html" class="text-gray-400 hover:text-purple-500 text-xl"><i class="fas fa-home"></i></a>
-      <a href="contact.html" class="text-purple-400 hover:text-purple-500 text-xl"><i class="fa-solid fa-envelope"></i></a>
+      <a href="contact.html" class="text-gray-400 hover:text-purple-500 text-xl"><i class="fa-solid fa-envelope"></i></a>
       <a href="" class="text-purple-500 text-xl"><i class="fas fa-user"></i></a>
   </footer>
   
