--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="author" content="Bandits999 Team">
     <meta property="og:title" content="Bandits999 - Official Website">
     <meta property="og:description" content="Follow Bandits999 on all platforms. Join our community!">
-    <meta property="og:image" content="https://placehold.co/300x80?text=Bandits999">
-    <meta property="og:url" content="https://yourdomain.com/">
+    <meta property="og:image" content="https://bandits999.vercel.app/img/Bandits-Banner.jpg">
+    <meta property="og:url" content="https://bandits999.vercel.app/">
     <meta name="twitter:card" content="summary_large_image">
-    <link rel="canonical" href="https://yourdomain.com/" />
+    <link rel="canonical" href="https://bandits999.vercel.app/" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/Bandits-600.png" type="image/png">
+    <link rel="icon" href="https://bandits999.vercel.app/img/Bandits-600.png" type="image/png">
   </head>
   <body>
     <main class="main-content">
